--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,8 @@
 [theme]
+base="light"
 primaryColor="#4bdcff"
-backgroundColor="#455373"
-secondaryBackgroundColor="#b3786a"
-textColor="#ffffff"
+secondaryBackgroundColor="#f3e7e7"
+textColor="#6886b1"
+
 
 
